--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -69,7 +69,7 @@
       "  <link color=\"#e48b55\" href=\"/safari-pinned-tab.svg\" rel=\"mask-icon\"/>\n",
       "  <meta content=\"#000000\" name=\"theme-color\"/>\n",
       "  <meta content=\"authenticity_token\" name=\"csrf-param\">\n",
-      "   <meta content=\"dLxfof1HczslBOri4Aep1X3YsY8ZLJbOlZ1FNl75r4c7FOK3gH9n4aO8QzccOQepXdIkqvW0aXh9NpPZEJQGiQ==\" name=\"csrf-token\">\n",
+      "   <meta content=\"tmsrmX5L0o5640sW79VPg45FlymMC+pEu0157TaYhlQI9lEDgf9HqBLFuTr5/UhHFwxK/46DMi9F3VhjX48poQ==\" name=\"csrf-token\">\n",
       "    <title>\n",
       "     News  – NASA’s Mars Exploration Program\n",
       "    </title>\n",
@@ -711,16 +711,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nStarting July 27, news activities will cover everything from mission engineering and science to returning samples from Mars to, of course, the launch itself.\\n'"
+       "'\\n\\nNASA to Broadcast Mars 2020 Perseverance Launch, Prelaunch Activities\\n\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,8 +731,8 @@
     "news_title\n",
     "\n",
     "# find paragraph descriptions\n",
-    "news_p = soup.find('div', class_='rollover_description_inner').text\n",
-    "news_p"
+    "#news_p = soup.find('div', class_='rollover_description_inner').text\n",
+    "#news_p"
    ]
   },
   {
